[package]
name = "fhp_dataset_creator"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/KM8Oz/FHP-dataset-creator.git"
license = "Apache-2.0"
repository = "https://github.com/KM8Oz/FHP-dataset-creator.git"
license-file = "LICENCE.md"
keywords = ["dataset", "cpu", "netword", "monitor", "opensource"]
description = "Simple and fast user activities monitor and dataset creator"
readme = "README.md"

[dependencies.tokio]
version = "1.0.3"
features = ["net", "time","sync", "process", "macros", "rt", "rt-multi-thread"] 
[dependencies.futures]
version = "0.3.25"
[dependencies.rayon]
version = "1.5"
[dependencies.sysinfo]
version = "0.28.2"
[dependencies.psutil]
version = "3.2.2"
[dependencies.regex]
version = "1"
[dependencies.httparse]
version = "1.8.0"
[dependencies.clap]
version = "4.0.18"
features = ["cargo", "color"]